--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Swar Recognition</title>
 
         <link rel="shortcut icon" href="favicon.png">
+        <link rel="apple-touch-icon" href="favicon.png"/>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
